k8s/web-prod/overlays/public-graphql/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graphql-core-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$3
spec:
  rules:
    - host: www.ensembl.org
      http:
        paths:
          - path: /data/graphql(/core)?(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: graphql-core-svc
                port:
                  number: 8000
